# data-for-seo

./: .gitignore  LICENSE  PROJECT_STATUS.md  README.md  data-for-seo-archon-init.md  demo.py  env.example  pyproject.toml  pytest.ini  setup.sh  test_workflows.py
PRPs/: README.md  seo-automation-framework.md
PRPs/ai_docs/: dataforseo_integration.md  seo_analysis_patterns.md
PRPs/scripts/: prp_runner.py
docs/: ARCHITECTURE.md  DATAFORSEO_CLIENT.md  ONBOARDING.md  QUICKSTART.md  WORKFLOWS.md  seo-aggregator-implementation.md
examples/: dataforseo_example.py  workflow_demo.py
scripts/: init-project.sh
src/data_for_seo/: __init__.py
src/data_for_seo/agents/: __init__.py  agent_coordinator.py  base.py  seo_analyzer.py  seo_collector.py  seo_processor.py
src/data_for_seo/config/: __init__.py  settings.py
src/data_for_seo/knowledge/: __init__.py  vector_store.py
src/data_for_seo/models/: __init__.py  base.py  seo.py
src/data_for_seo/tools/: __init__.py  dataforseo_client.py  rate_limiter.py
src/data_for_seo/workflows/: __init__.py  competitor_analysis_workflow.py  content_optimization_workflow.py  keyword_tracking_workflow.py  seo_audit_workflow.py  technical_seo_workflow.py  workflow_engine.py
tests/: conftest.py  test_agents_basic.py
tests/e2e/: test_complete_seo_audit.py
tests/fixtures/: mock_api_responses.py  sample_html_pages.py
tests/integration/: test_dataforseo_integration.py
tests/performance/: test_concurrent_requests.py
tests/tools/: __init__.py  test_dataforseo_client.py  test_rate_limiter.py
tests/unit/test_agents/: test_seo_analyzer.py
tests/unit/test_models/: test_base_models.py  test_seo_models.py
